added support for situations as input and analyzes of engine
